--- a/research.html
+++ b/research.html
@@ -43,8 +43,9 @@
     <div data-include="navbar.html"></div>
 
     <div class="container">
-      <!-- <div id="sidebar-container"></div> --> <!-- for caching the sidebar -->
-      <div data-include="./sidebar.html" class="sidebar"></div>
+      <!-- <div id="sidebar-container"></div> -->
+      <!-- for caching the sidebar -->
+      <div data-include="./sidebar.html" class="sidebar-back-rect"></div>
       <div class="main-content">
         <h3>
           <span class="icon-box"><i class="fas fa-book"></i></span> Publications
@@ -128,6 +129,5 @@
     </div>
     <script src="scripts/navbar.js"></script>
     <script src="scripts/sidebar.js"></script>
-
   </body>
 </html>
