--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@
 
     <div class="container">
       <!-- <div id="sidebar-container"></div> --> <!-- for caching the sidebar -->
-      <div data-include="./sidebar.html" class="sidebar"></div>
+      <div data-include="./sidebar.html" class="sidebar-back-rect"></div>
       <div class="main-content">
         <div class="Job">
           <h3>Job Experience</h3>
