--- a/achievements.html
+++ b/achievements.html
@@ -44,8 +44,9 @@
     <div data-include="navbar.html"></div>
 
     <div class="container">
-      <!-- <div id="sidebar-container"></div> --> <!-- for caching the sidebar -->
-      <div data-include="./sidebar.html" class="sidebar"></div>
+      <!-- <div id="sidebar-container"></div> -->
+      <!-- for caching the sidebar -->
+      <div data-include="./sidebar.html" class="sidebar-back-rect"></div>
       <div class="main-content">
         <h3>
           <span class="icon-box"><i class="fas fa-trophy"></i></span>
@@ -54,10 +55,9 @@
         <div id="achievements-container" class="cards"></div>
       </div>
     </div>
-    
+
     <script src="scripts/achievements.js"></script>
     <script src="scripts/navbar.js"></script>
     <script src="scripts/sidebar.js"></script>
   </body>
-  </html>
-  
+</html>
