--- a/sidebar.html
+++ b/sidebar.html
@@ -1,12 +1,26 @@
-
-<img src="./assets/img/Razin Reaz Abedin portfolio.jpg" alt="Razin Reaz Abedin">
+<!-- <img src="./assets/img/Razin Reaz Abedin portfolio.jpg" alt="Razin Reaz Abedin">
 <h1>Razin Reaz Abedin</h1>
 <p>Lecturer, Coder, Musician, Gamer</p>
 
-<!-- Social Media Links -->
 <div class="social-links">
     <a href="https://github.com/RazinReaz" target="_blank"><i class="fab fa-github"></i></a>
     <a href="https://www.linkedin.com/in/razinreaz/" target="_blank"><i class="fab fa-linkedin"></i></a>
     <a href="mailto:razin.reaz@gmail.com"><i target="_blank" class="fas fa-envelope"></i></a>
     <a href="https://www.youtube.com/@RazinReazAbedin" target="_blank"><i class="fab fa-youtube"></i></a>
-</div>
+</div> -->
+
+    <div class="sidebar">
+        <img src="./assets/img/Razin Reaz Abedin portfolio.jpg" alt="Razin Reaz Abedin">
+        <h1>Razin Reaz Abedin</h1>
+        <p>Lecturer, Coder, Musician, Gamer</p>
+
+        <div class="social-links">
+            <a href="https://github.com/RazinReaz" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/razinreaz/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="mailto:razin.reaz@gmail.com"><i target="_blank" class="fas fa-envelope"></i></a>
+            <a href="https://www.youtube.com/@RazinReazAbedin" target="_blank"><i class="fab fa-youtube"></i></a>
+        </div>
+    </div>
+
+
+
