--- a/navbar.html
+++ b/navbar.html
@@ -6,12 +6,19 @@
         <span></span>
     </div>
     <ul class="nav-list">
-        <li><a href="./index.html">About Me</a></li>
+        <!-- <li><a href="./index.html">About Me</a></li>
         <li><a href="./research.html">Research</a></li>
         <li><a href="./projects.html">Projects</a></li>
         <li><a href="./resume.html">Resume</a></li>
         <li><a href="./achievements.html">Achievements</a></li>
-        <li><a href="./more.html">More about me</a></li>
+        <li><a href="./more.html">More about me</a></li> -->
         <!-- <li><a href="./contact.html">Contact</a></li> -->
+        <li><a href="#About">About Me</a></li>
+        <li><a href="#Publications">Publications</a></li>
+        <li><a href="#Research">Research</a></li>
+        <li><a href="#Projects">Projects</a></li>
+        <li><a href="#Resume">Resume</a></li>
+        <li><a href="#Achievements">Achievements</a></li>
+        <li><a href="#More">More about me</a></li>
     </ul>
 </div>
