responsive css edited

--- a/index.html
+++ b/index.html
@@ -69,12 +69,13 @@
             undergraduate degree in July 2024 with a <b>CGPA of 3.93/4.00</b>.
           </p> -->
           <br><br>
-          <p>
-            I am interested in 
-            <b>Computer Graphics</b>,
-            <b>Simulation</b>, <b>Physically Based Animation</b>, and
-            <b>Physically Based Rendering</b>.
-          </p>
+          <p>I am interested in:</p>
+            <ul class="about-research-interest-list">
+              <li>Computer Graphics</li>
+              <li>Real-time Simulation</li>
+              <li>Physically Based Animation</li>
+              <li>Rendering</li>
+            </ul>
           <p>
             Currently, I am an adjunct lecturer at the
             <a href="https://cse.buet.ac.bd/">Department of Computer Science and Engineering</a>, 
