--- a/sidebar.html
+++ b/sidebar.html
@@ -10,7 +10,7 @@
 </div> -->
 
     <div class="sidebar">
-        <img src="./assets/img/Razin Reaz Abedin portfolio.jpg" alt="Razin Reaz Abedin">
+        <img src="./assets/img/Razin Reaz Abedin portfolio.jpg" alt="Razin Reaz Abedin" loading="lazy">
         <h1>Razin Reaz Abedin</h1>
         <p>Lecturer, Coder, Musician, Gamer</p>
 
