--- a/navbar.html
+++ b/navbar.html
@@ -1,24 +1,18 @@
 
 <div class="navbar">
     <div class="menu-icon" onclick="toggleMenu()">
-        <span></span>
-        <span></span>
-        <span></span>
+        <span class="menu-icon__line"></span>
+        <span class="menu-icon__line"></span>
+        <span class="menu-icon__line"></span>
     </div>
     <ul class="nav-list">
-        <!-- <li><a href="./index.html">About Me</a></li>
-        <li><a href="./research.html">Research</a></li>
-        <li><a href="./projects.html">Projects</a></li>
-        <li><a href="./resume.html">Resume</a></li>
-        <li><a href="./achievements.html">Achievements</a></li>
-        <li><a href="./more.html">More about me</a></li> -->
-        <!-- <li><a href="./contact.html">Contact</a></li> -->
-        <li><a href="#About">About Me</a></li>
-        <li><a href="#Publications">Publications</a></li>
-        <li><a href="#Research">Research</a></li>
-        <li><a href="#Projects">Projects</a></li>
-        <li><a href="#Resume">Resume</a></li>
-        <li><a href="#Achievements">Achievements</a></li>
-        <li><a href="#More">More about me</a></li>
+
+        <li class="nav-list__item"><a href="#About" class="nav-list__link">About Me</a></li>
+        <li class="nav-list__item"><a href="#Publications" class="nav-list__link">Publications</a></li>
+        <li class="nav-list__item"><a href="#Research" class="nav-list__link">Research</a></li>
+        <li class="nav-list__item"><a href="#Projects" class="nav-list__link">Projects</a></li>
+        <li class="nav-list__item"><a href="#Resume" class="nav-list__link">Resume</a></li>
+        <li class="nav-list__item"><a href="#Achievements" class="nav-list__link">Achievements</a></li>
+        <li class="nav-list__item"><a href="#More" class="nav-list__link">More about me</a></li>
     </ul>
 </div>
