--- a/index.html
+++ b/index.html
@@ -69,12 +69,13 @@
           <p>I am interested in:</p>
             <ul class="about__research-list">
               <li class="about__research-item">Computer Graphics</li>
-              <li class="about__research-item">Real-time Simulation</li>
               <li class="about__research-item">Physically Based Animation</li>
+              <li class="about__research-item">Real-time Simulation</li>
               <li class="about__research-item">Rendering</li>
             </ul>
           <p>
-            Currently, I am an adjunct lecturer at the
+            Currently, I am working as a junior research assistant at <a href="https://universalmachine.io" target="_blank">Universal Machine</a>.
+            <br>Before that, I worked as an adjunct lecturer at the
             <a href="https://cse.buet.ac.bd/" target="_blank">Department of Computer Science and Engineering</a>, 
             <a href="https://www.buet.ac.bd/web/#/" target="_blank">BUET</a>.
           </p>
