--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <h3 class="about__subtitle">
             These are some of my creations<br>Why not give them a click?
           </h3>
-                     <div class="slideshow-container">
+            <div class="slideshow-container">
              <div class="slider-wrapper">
                <button class="slider-arrow left" onclick="scrollSlider('left')" aria-label="Scroll left">
                  <i class="fas fa-chevron-left"></i>
@@ -84,6 +84,24 @@
 
         <div class="content" id="Publications">
           <h1>Publications</h1>
+          <div class="experience-item">
+            <div class="experience-circle"></div>
+            <div class="publication-title">
+              Forecasting Occupational Survivability of Rickshaw Pullers in a Changing Climate with Wearable Data
+            </div>
+            <div class="publication-conference">
+              Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (IMWUT 2025)
+            </div>
+            <div class="publication-date">2025</div>
+            <div class="publication-authors">
+              Masfiqur Rahaman, Maoyejatun Hasana, Shahad Shahriar Rahman, MD. Sajid Mostafiz Noor, <b>Razin Reaz Abedin</b>, Md Toki Tahmid, Duncan Watson Paris, Tanzeem Choudhury, A. B. M. Alim Al Islam, and Tauhidur Rahman
+            </div>
+            <a
+              href="https://arxiv.org/pdf/2511.00081"
+              class="publication-button"
+              target="_blank"
+              >PDF</a>
+          </div>
           <div class="experience-item">
             <div class="experience-circle"></div>
             <div class="publication-title">
